2010-09-25  Eli Zaretskii  <eliz@gnu.org>

	* print.c (print_object, print_string, strout): Use EMACS_INT for
	string indices.

	* minibuf.c (string_to_object): Use EMACS_INT for string position
	and size.

	* marker.c (verify_bytepos): Use EMACS_INT for buffer positions.

	* lread.c <read_from_string_index, read_from_string_index_byte>
	<read_from_string_limit, readchar_count>: Define EMACS_INT.
	(readchar, unreadchar, read_internal_start): Use EMACS_INT for
	buffer positions and string length.

	* keyboard.c <last_point_position, last_non_minibuf_size>: Declare
	EMACS_INT.
	(echo_truncate, adjust_point_for_property, read_char)
	(gen_help_event, make_lispy_event, modify_event_symbol)
	(Fexecute_extended_command, stuff_buffered_input): Use EMACS_INT
	for buffer positions and string length.

	* keyboard.h (gen_help_event): Adjust prototype.

	* termhooks.h <struct input_event>: Make `code' member EMACS_INT.

	* commands.h <last_point_position>: Declare EMACS_INT.

	* xdisp.c <help_echo_pos>: Define as EMACS_INT.
	(truncate_echo_area): Accept EMACS_INT argument.

	* dispextern.h <help_echo_pos>: Declare EMACS_INT.

	* lisp.h (truncate_echo_area): Adjust prototype.

	* composite.c (composition_adjust_point): Return EMACS_INT.

	* composite.h (composition_adjust_point): Adjust prototype.

2010-09-25  Juanma Barranquero  <lekktu@gmail.com>

	* process.c (Fmake_network_process): When arg :host is 'local,
	use address 127.0.0.1, not name "localhost".  (Bug#6781)

2010-09-24  Eli Zaretskii  <eliz@gnu.org>

	* indent.c (Fcurrent_indentation, indented_beyond_p)
	(compute_motion): Use EMACS_INT for buffer position variables.

	* lisp.h (indented_beyond_p): Adjust prototype.

	* buffer.c (overlay_strings): Return EMACS_INT.

	* buffer.h (overlay_strings): Adjust prototype.

	* region-cache.c (pp_cache): Adjust format to arguments.

	* eval.c <specpdl_size, lisp_eval_depth>: Declare EMACS_INT.
	(call_debugger): Use EMACS_INT for specpdl_size related variables.